name:                 wire
version:              0.1.0.0
author:               Nick Spinale
maintainer:           Nick Spinale <nick@nickspinale.com>
license:              BSD3
license-file:         LICENSE
build-type:           Simple
cabal-version:        >=1.10

library
  default-language:   Haskell2010
  ghc-options:        -Wall -fwarn-tabs -fno-warn-unused-matches
  hs-source-dirs:     src

  exposed-modules:    Data.Wire.Get
                      Data.Wire.Get.Monad
                      Data.Wire.Get.Buffer
                      Data.Wire.Get.Buffer.Internal
                      Data.Wire.Get.ByteString
                      Data.Wire.Get.ByteString.Internal

  build-depends:      base >=4.8 && <5
                    , bytestring
                    , transformers

test-suite tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  ghc-options:        -fno-warn-missing-signatures
  hs-source-dirs:     tests, src
  main-is:            QC.hs

  other-modules:      QC.Common
                    , QC.Buffer
                    , QC.ByteString

                    , Data.Wire.Get
                    , Data.Wire.Get.Buffer
                    , Data.Wire.Get.ByteString

  build-depends:      base >=4.8 && <5
                    , bytestring
                    , transformers
                    , QuickCheck
                    , tasty
                    , tasty-quickcheck
